--- a/src/app/modules/schooltimetable/teacheroffperiod/teacheroffperiod.component.scss
+++ b/src/app/modules/schooltimetable/teacheroffperiod/teacheroffperiod.component.scss
@@ -6,3 +6,7 @@ mat-cell,mat-header-cell{
     padding: 15px;
     border-right: 1px solid lightgray;
 }
+// @media print {
+//     font-size: 133%;
+//   }
+  
