--- a/src/app/modules/studentexam/examstudentsubjectresult/examstudentsubjectresult.component.html
+++ b/src/app/modules/studentexam/examstudentsubjectresult/examstudentsubjectresult.component.html
@@ -39,7 +39,7 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                <button [disabled]="loading" mat-raised-button color="accent" (click)="GetExamStudentSubjectResults()">
+                <button [disabled]="loading" mat-raised-button color="accent" (click)="GetStudentSubjects()">
                     <mat-icon>search</mat-icon>
                     <mat-icon *ngIf="loading">
                         <mat-spinner diameter="20" color="Blue"></mat-spinner>
