--- a/src/app/modules/misc/no-of-student/no-of-student.component.html
+++ b/src/app/modules/misc/no-of-student/no-of-student.component.html
@@ -9,16 +9,17 @@
         <mat-form-field appearance="outline">
             <mat-label>Class</mat-label>
             <mat-select formControlName="searchClassId">
+                <mat-option value="0">select</mat-option>
                 <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
                     {{item.ClassName}}
                 </mat-option>
             </mat-select>
         </mat-form-field>
         <button [disabled]="loading" mat-raised-button color="accent" (click)="GetStudentClasses()">
-             <mat-icon>search</mat-icon>
-                            <mat-icon *ngIf="loading">
-                                <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                            </mat-icon>
+            <mat-icon>search</mat-icon>
+            <mat-icon *ngIf="loading">
+                <mat-spinner diameter="20" color="Blue"></mat-spinner>
+            </mat-icon>
         </button>
     </form>
 </div>
@@ -30,9 +31,12 @@
         <mat-cell *matCellDef="let element">
             {{element[disCol]}}
         </mat-cell>
-        <mat-footer-cell *matFooterCellDef>
+        <mat-footer-cell *matFooterCellDef style="justify-content: center;">
+            <span *ngIf="BoyGirlTotal[disCol]!=undefined">
+                {{disCol}}: {{BoyGirlTotal[disCol]}}
+            </span>            
             <span *ngIf="disCol=='Total'">
-                Total: {{TotalStudent}}
+                Grand Total: {{TotalStudent}}
             </span>
         </mat-footer-cell>
     </ng-container>
