--- a/src/app/modules/misc/no-of-student/no-of-student.component.scss
+++ b/src/app/modules/misc/no-of-student/no-of-student.component.scss
@@ -1,3 +1,7 @@
 mat-form-field{
     margin-right: 15px;
 }
+mat-cell,mat-header-cell{
+    justify-content: center;
+    border-right: 1px solid lightgray;
+}
