--- a/src/app/modules/schooltimetable/teacheroffperiod/teacheroffperiod.component.html
+++ b/src/app/modules/schooltimetable/teacheroffperiod/teacheroffperiod.component.html
@@ -26,7 +26,7 @@
         </form> -->
 
         <div>
-            <mat-table [dataSource]="dataSourcePeriodStatistic" style="margin-bottom: 15px;">
+            <mat-table id="printSection" [dataSource]="dataSourcePeriodStatistic" style="margin-bottom: 15px;">
                 <ng-container *ngFor="let disCol of PeriodStatisticDisplay;" matColumnDef="{{disCol}}">
                     <mat-header-cell *matHeaderCellDef>
                         <div *ngIf="disCol!='TeacherName'">
@@ -34,12 +34,16 @@
                         </div>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" innerHTML="{{element[disCol]}}">
-                        
+
                     </mat-cell>
                 </ng-container>
                 <mat-header-row *matHeaderRowDef="PeriodStatisticDisplay"></mat-header-row>
                 <mat-row *matRowDef="let row; columns: PeriodStatisticDisplay;" class="element-row"></mat-row>
             </mat-table>
+            <button *ngIf="PeriodStatistics.length>0" [disabled]="loading" matTooltip="print"
+                printSectionId="printSection" [useExistingCss]="true" ngxPrint class="mat-raised-button">
+                <mat-icon>print</mat-icon>
+            </button>
         </div>
     </div>
 </div>
