--- a/src/app/modules/student/studentprogressreport/studentprogressreport.component.html
+++ b/src/app/modules/student/studentprogressreport/studentprogressreport.component.html
@@ -2,7 +2,7 @@
     <div><strong>Progress Report</strong></div>
 </div>
 <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-<div style="width: 100%;">
+<div style="width: 100%;" id="printSection">
     <div style="margin-top:15px;margin-bottom:15px">
         <mat-table #table [dataSource]="NonGradedSubjectsDataSource" matSort *ngIf="NonGradedDisplayColumns.length>1">
             <ng-container *ngFor="let disCol of NonGradedDisplayColumns; let colIndex = index"
@@ -46,28 +46,24 @@
         </mat-table>
     </div>
     <div style="margin-top:15px;margin-bottom:15px">
-
         <mat-table #table [dataSource]="dataSourceEvaluation" matSort *ngIf="EvaluationDisplayedColumns.length>1">
             <ng-container *ngFor="let disCol of EvaluationDisplayedColumns; let colIndex = index"
                 matColumnDef="{{disCol}}">
                 <mat-header-cell *matHeaderCellDef mat-sort-header style="border-right:1px solid lightgray">
-                    <span style="padding-left: 15px;" *ngIf="disCol!='FirstCol' && disCol!='Description'">{{disCol}}</span>
+                    <span style="padding-left: 15px;"
+                        *ngIf="disCol!='FirstCol' && disCol!='Description'">{{disCol}}</span>
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" style="border-right:1px solid lightgray">
-                    <span
-                        style="width:100%;display:flex; flex-direction:column;justify-content: flex-start;">
-                        <span
-                            *ngIf="disCol =='Description' && 
+                    <span style="width:100%;display:flex; flex-direction:column;justify-content: flex-start;">
+                        <span *ngIf="disCol =='Description' && 
                             element.QuestionnaireType =='Evaluation Master'"
                             style="font-weight: bold; width: 100%;padding: 15px 15px 10px 0px;color:#A4de02">
                             {{element[disCol]}}</span>
-                            <span
-                            *ngIf="disCol =='Description'
+                        <span *ngIf="disCol =='Description'
                                 && element.QuestionnaireType=='Heading'"
                             style="font-weight: bold; width: 100%;padding: 15px 15px 10px 0px;color:#1E5631">
                             {{element[disCol]}}</span>
-                            <span
-                            *ngIf="disCol =='Description' && element.QuestionnaireType=='Sub Heading'"
+                        <span *ngIf="disCol =='Description' && element.QuestionnaireType=='Sub Heading'"
                             style="font-weight: bold; width: 100%;padding: 15px 15px 10px 0px;color:#76ba1b">
                             {{element[disCol]}}</span>
                         <span *ngIf="element.QuestionnaireType=='Questionnaire' && disCol =='Description'"
@@ -75,15 +71,14 @@
                             <mat-icon class="icon">star_outline</mat-icon> {{element[disCol]}}
                         </span>
                         <span [innerHTML]="element[disCol]|encodeHTML"
-                            style="align-self:stretch; width: 100%;min-height: 50px;padding: 15px;"
-                            *ngIf="element['QuestionnaireType']!='Evaluation Master' 
+                            style="align-self:stretch; width: 100%;min-height: 50px;padding: 15px;" *ngIf="element['QuestionnaireType']!='Evaluation Master' 
                                    && disCol!='Description' 
                                    && disCol!='QuestionnaireType' 
                                    && disCol!='EvaluationMasterId'
                                    && disCol!='EvaluationName'
                                    && element[disCol]!=undefined 
                                    && element[disCol].length>0">
-                        </span> 
+                        </span>
                     </span>
                 </mat-cell>
             </ng-container>
@@ -91,4 +86,10 @@
             <mat-row *matRowDef="let row; columns: EvaluationDisplayedColumns;" class="element-row"></mat-row>
         </mat-table>
     </div>
+</div>
+<div style="display:flex;justify-content:center;width:100%">
+    <button *ngIf="NonGradedMarkResults.length>0 || GradedMarksResults.length>0" [disabled]="loading" matTooltip="print"
+        printSectionId="printSection" [useExistingCss]="true" ngxPrint class="mat-raised-button">
+        <mat-icon>print</mat-icon>
+    </button>
 </div>
