--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -1,6 +1,6 @@
 <app-header [deviceXs]="deviceXs" (toggleSideBarForme)="sideBarToggler()"></app-header>
 
-<mat-sidenav-container style="margin-top:20px ;" class="flex-container" autosize="true">
+<mat-sidenav-container style="margin-top:20px;" class="flex-container" autosize="true">
     <mat-sidenav style="padding: 17px;" [(opened)]="opened" mode="side" (click)="toggleSidebar()">
         <div mat-menu-item *ngFor="let i of sideMenu" [routerLink]="[i.link]" routerLinkActive="active-list-item"
             [routerLinkActiveOptions]="{exact: true}" (click)="busy($event)">
@@ -9,9 +9,8 @@
         </div>
     </mat-sidenav>
     <mat-sidenav-content class="maincontent">
-        <div style="display:flex;flex-direction: row;width:100%">
+        <div style="display:flex;flex-direction: row;">
             <button style="margin-left:5px; width:7px;border:1px solid white" (click)="toggleSidebar()">
-                <!-- <mat-icon>arrow_right</mat-icon> -->
             </button>
             <router-outlet></router-outlet>
         </div>
