--- a/src/app/modules/misc/rulesorpolicy/rulesorpolicy.component.scss
+++ b/src/app/modules/misc/rulesorpolicy/rulesorpolicy.component.scss
@@ -7,9 +7,12 @@ mat-form-field{
     flex:1 1 400px;
 }
 .mat-column-RulesOrPolicyCategoryId,
-.mat-column-RulesOrPolicySubCategoryId
+.mat-column-RuleOrPolicyTypeId
 {
     flex:1 1 120px;
+}
+.mat-column-Sequence{
+    flex:1 1 100px;
 }
 .mat-column-Active,.mat-column-Action{
     justify-content: center;
