--- a/src/app/modules/studentexam/verifyresults/verifyresults.component.scss
+++ b/src/app/modules/studentexam/verifyresults/verifyresults.component.scss
@@ -2,15 +2,18 @@ mat-form-field{
     margin-right: 15px;
     width: 98%;
 }
-
+mat-cell:first-of-type{
+    padding-left: 0px;
+}
 .mat-row {
     height: auto;
 }
 mat-cell,mat-header-cell{
     border-right: 1px solid lightgray;
     padding: 10px;
-    width: 100px;
+    display: flex;
     justify-content: center;
+    align-items: center;
     align-self: stretch;
 }
 .mat-column-Student{
@@ -23,9 +26,15 @@ mat-cell,mat-header-cell{
     justify-content:center;
 
 }
-.mat-footer-row,
-.mat-header-row,
-.mat-row {
-    display: inline-flex;
-    min-width: 100%;
+
+mat-cell:nth-child(1),
+mat-header-cell:nth-child(1) {
+    flex: 0 0 10%;
 }
+
+// .mat-footer-row,
+// .mat-header-row,
+// .mat-row {
+//     display: inline-flex;
+//     min-width: 100%;
+// }
